--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
                         <img data-wow-delay="0.5s" class="img-responsive white  wow fadeInLeftBig" src="img/iphone/iphone-white.png" alt="iPhone White"> -->
 
-                        <video data-wow-delay="0.2s" class="img-responsive black  wow fadeInLeftBig" src="images/renhelaiyuan.mp4" controls="controls" autoplay="autoplay">您的浏览器不支持 video 标签。</video>
+                        <video data-wow-delay="0.2s" class="img-responsive black  wow fadeInLeftBig" src="images/renhelaiyuan.mp4" controls="controls">您的浏览器不支持 video 标签。</video>
                     </div>
                 <div class="service-features wow fadeInRight">
                     <h3>报错“软件已损坏”</h3>
