--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <!-- Site Title -->
         <title>Macmao - 官方售后平台</title>
-        <link rel="mask-icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000">
+        <link rel="icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000" type="image/x-icon">
         <!--
         Google Fonts
         ============================================= -->
@@ -679,57 +679,6 @@
         <!--
         End #subscribe
         ========================== -->
-
-        <!--
-        #contact
-        ========================== -->
-        
-        <!--
-        End #contact
-        ========================== -->
-
-        <!--
-        #footer
-        ========================== -->
-     <!--    <footer id="footer" class="text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-
-                        <div class="footer-social wow fadeInUp">
-                                <h3><span>K</span>eeper</h3>
-                            <ul class="text-center list-inline">
-                                <li>
-                                    <div class="fact-icon">
-                                        <i class="fa fa-facebook fa-lg"></i>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="fact-icon">
-                                        <i class="fa fa-twitter fa-lg"></i>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="fact-icon">
-                                        <i class="fa fa-google-plus fa-lg"></i>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="copyright">
-                           
-                            <p>Theme by Scripteden. Developed by Shaifuddin / More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </footer> -->
-        <!--
-        End #footer
-        ========================== -->
-
 
         <!--
         JavaScripts
