--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <!-- Site Title -->
         <title>Macmao - 官方售后平台</title>
-        <link rel="icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000" type="image/x-icon">
+        <link rel="icon" href="images/pinned-octocat.svg" color="#000000" type="image/x-icon">
         <!--
         Google Fonts
         ============================================= -->
