--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="home-intro">
                     <div class="animated bounceInRight">
-                        <h2>Welcome to macmao.</h2>
+                        <h2>macmao.售后平台</h2>
                         <p>本店所有软件皆为<span style='color:red;'>已永久破解版</span>或<span style='color:red;'>已永久内购完整版</span>，自动发货百度网盘链接下载，直接安装永久使用，包免费售后更新升级，若安装失败全额退款。</p>
                         <a href="https://shop142260588.taobao.com/shop/view_shop.htm?spm=a211vu.server-web-home.favorite.d53.64f02d58EwpYOg&mytmenu=mdianpu&user_number_id=2431045741" title="前往店铺购买"><ul class="list-inline available">
                             <li><span>前往店铺</span></li>
